возвращение нецелевого реквизита как DetailsDTO